--- a/package.json
+++ b/package.json
@@ -11,15 +11,23 @@
   },
   "dependencies": {
     "axios": "0.21.1",
+    "classnames": "2.2.6",
+    "date-fns": "2.17.0",
+    "framer-motion": "3.3.0",
     "next": "10.0.6",
     "react": "17.0.1",
     "react-dom": "17.0.1",
     "react-yandex-metrika": "2.6.0"
   },
   "devDependencies": {
+    "@eslint/eslintrc": "0.3.0",
+    "@types/classnames": "2.2.11",
     "@types/node": "14.14.23",
     "@types/react": "17.0.1",
     "@types/react-dom": "17.0.1",
+    "eslint": "7.19.0",
+    "eslint-config-next": "0.2.4",
+    "husky": "5.0.8",
     "typescript": "4.1.5"
   }
 }
