--- a/package.json
+++ b/package.json
@@ -4,31 +4,32 @@
   "scripts": {
     "prepare": "husky install",
     "dev": "next dev",
+    "debug": "NODE_OPTIONS='--inspect' next dev",
     "build": "next build",
     "start": "next start",
     "lint": "next lint",
     "export": "next export"
   },
   "dependencies": {
-    "axios": "0.21.1",
-    "classnames": "2.2.6",
-    "date-fns": "2.17.0",
-    "framer-motion": "3.3.0",
-    "next": "10.0.6",
-    "react": "17.0.1",
-    "react-dom": "17.0.1",
-    "react-hook-form": "6.15.1",
+    "axios": "1.9.0",
+    "classnames": "2.5.1",
+    "date-fns": "4.1.0",
+    "framer-motion": "12.9.4",
+    "next": "15.3.1",
+    "react": "19.0.0",
+    "react-dom": "19.0.0",
+    "react-hook-form": "7.56.1",
     "react-yandex-metrika": "2.6.0"
   },
   "devDependencies": {
-    "@eslint/eslintrc": "0.3.0",
-    "@types/classnames": "2.2.11",
+    "@eslint/eslintrc": "3.3.1",
+    "@types/classnames": "2.3.0",
     "@types/node": "14.14.23",
-    "@types/react": "17.0.1",
-    "@types/react-dom": "17.0.1",
-    "eslint": "7.19.0",
-    "eslint-config-next": "0.2.4",
-    "husky": "5.0.8",
-    "typescript": "4.1.5"
+    "@types/react": "19.1.3",
+    "@types/react-dom": "19.1.3",
+    "eslint": "9.26.0",
+    "eslint-config-next": "15.3.1",
+    "husky": "9.1.7",
+    "typescript": "5.8.3"
   }
 }
