--- a/.github/workflows/master.yml
+++ b/.github/workflows/master.yml
@@ -1,19 +1,19 @@
-name: Publish Docker
+# name: Publish Docker
 
-on:
-  push:
-    branches: [ master ]
+# on:
+#   push:
+#     branches: [ master ]
 
-jobs:
-  build:
-    runs-on: ubuntu-last
-    steps:
-      - uses: actions/checkout@master
-      - name: Publish to Registry
-        uses: elgohr/Publish-Docker-Github-Action@master
-        with:
-          registry: docker.pkg.github.com
-          name: docker.pkg.github.com/<username>/<path>
-          username: ${{ secrets.DOCKER_USERNAME }}
-          password: ${{ secrets.DOCKER_PASSWORD }}
-          tags: 'develop'
+# jobs:
+#   build:
+#     runs-on: ubuntu-last
+#     steps:
+#       - uses: actions/checkout@master
+#       - name: Publish to Registry
+#         uses: elgohr/Publish-Docker-Github-Action@master
+#         with:
+#           registry: docker.pkg.github.com
+#           name: docker.pkg.github.com/<username>/<path>
+#           username: ${{ secrets.DOCKER_USERNAME }}
+#           password: ${{ secrets.DOCKER_PASSWORD }}
+#           tags: 'develop'
