--- a/package.json
+++ b/package.json
@@ -23,13 +23,15 @@
   },
   "devDependencies": {
     "@eslint/eslintrc": "3.3.1",
+    "@tailwindcss/postcss": "4.1.5",
     "@types/classnames": "2.3.0",
-    "@types/node": "14.14.23",
+    "@types/node": "20.17.45",
     "@types/react": "19.1.3",
     "@types/react-dom": "19.1.3",
     "eslint": "9.26.0",
     "eslint-config-next": "15.3.1",
     "husky": "9.1.7",
+    "tailwindcss": "4.1.5",
     "typescript": "5.8.3"
   }
 }
